@@ -26,26 +26,22 @@ import org.apache.spark.internal.config.{DRIVER_JAVA_OPTIONS, EXECUTOR_JAVA_OPTI
 
 object JavaModuleUtils {
 
-  private val javaModuleOptions = Set("--add-opens java.base/java.nio=ALL-UNNAMED",
-    "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens java.base/java.nio=ALL-UNNAMED",
-    "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens java.base/java.util=ALL-UNNAMED",
-    "--add-opens java.base/sun.security.action=ALL-UNNAMED",
-    "--add-opens java.base/sun.util.calendar=ALL-UNNAMED",
+  private val javaModuleOptions = Set(
     "--add-opens java.base/java.lang=ALL-UNNAMED",
-    "--add-opens java.base/sun.nio.cs=ALL-UNNAMED",
-    "--add-opens java.base/java.net=ALL-UNNAMED",
+    "--add-opens java.base/java.lang.invoke=ALL-UNNAMED",
     "--add-opens java.base/java.io=ALL-UNNAMED",
+    "--add-opens java.base/java.net=ALL-UNNAMED",
+    "--add-opens java.base/java.nio=ALL-UNNAMED",
+    "--add-opens java.base/java.util=ALL-UNNAMED",
     "--add-opens java.base/java.util.concurrent=ALL-UNNAMED",
-    "--add-exports java.base/jdk.internal.util.random=ALL-UNNAMED")
+    "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens java.base/sun.util.calendar=ALL-UNNAMED")
 
   def isJavaVersionAtLeast17: Boolean = SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_17)
 
   def defaultModuleOptions(): String = javaModuleOptions.mkString(" ", " ", " ")
-
 
   def supplementJava17ModuleOptsIfNeeded(conf: SparkConf): Unit = {
 
